apps/docserver/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docserver
  namespace: service
spec:
  selector:
    matchLabels:
      app: docserver
      version: latest
  replicas: 1
  template:
    metadata:
      labels:
        app: docserver
        version: latest
    spec:
      serviceAccountName: docserver
      securityContext: {}
      containers:
        - image: ghcr.io/anyflow/docserver:latest
          imagePullPolicy: Always
          name: docserver
          ports:
            - containerPort: 80
          resources: {}
